--- a/run/config/jei/worldSettings.cfg
+++ b/run/config/jei/worldSettings.cfg
@@ -8,7 +8,7 @@ world-78688046 {
 
     # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=creative
+    S:filterText=iron
 
     # Show the list of ingredients next to open guis.
     B:overlayEnabled=true
