--- a/run/config/jei/worldSettings.cfg
+++ b/run/config/jei/worldSettings.cfg
@@ -2,15 +2,23 @@
 
 ~CONFIG_VERSION: 0.1.0
 
-world-78688046 {
+world-1441425632 {
     # Give items instead of showing the recipe.
     B:cheatItemsEnabled=true
 
     # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=@my
+    S:filterText=glow
 
     # Show the list of ingredients next to open guis.
+    B:overlayEnabled=true
+}
+
+
+world-78688046 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=@my
     B:overlayEnabled=true
 }
 
