--- a/run/config/jei/worldSettings.cfg
+++ b/run/config/jei/worldSettings.cfg
@@ -3,22 +3,22 @@
 ~CONFIG_VERSION: 0.1.0
 
 world-1441425632 {
-    # Give items instead of showing the recipe.
     B:cheatItemsEnabled=true
-
-    # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
     S:filterText=glow
-
-    # Show the list of ingredients next to open guis.
     B:overlayEnabled=true
 }
 
 
 world-78688046 {
+    # Give items instead of showing the recipe.
     B:cheatItemsEnabled=true
+
+    # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=@my
+    S:filterText=fancy
+
+    # Show the list of ingredients next to open guis.
     B:overlayEnabled=true
 }
 
